# discovery

./: CLAUDE.md  README.md  pyproject.toml
.claude/: config.toml
.claude/skills/: discovery.md
.claude/skills/discovery/: SKILL.md
.claude/skills/discovery/scripts/: queue_apple_music.applescript
discovery/: __init__.py  backup.py  cli.py  cli_items.py  cli_query.py  cli_status.py  config.py  db.py  export.py  models.py  patterns.py  utils.py
discovery/cli/: __init__.py  backups.py  core.py  display.py  display_helpers.py  items_helpers.py  query.py  query_helpers.py  sql.py  status_helpers.py  wishlist.py
discovery/importers/: __init__.py  amazon_prime.py  apple_music.py  apple_podcasts.py  apple_tv.py  base.py  bbc_iplayer.py  disney_plus.py  goodreads.py  netflix.py  qobuz.py  spotify.py  steam.py
discovery/scrapers/: __init__.py  netflix_html.py
tests/: __init__.py  conftest.py  test_backup.py  test_cli.py  test_db.py  test_deduplication.py  test_display_helpers.py  test_export.py  test_importers.py  test_models.py  test_scrapers.py  test_status.py  test_utils.py  test_wishlist.py
