[project]
name = "discovery"
version = "0.1.0"
description = "Discover new things you might love, powered by Claude"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.0",
    "duckdb>=1.1.0",
    "httpx>=0.27.0",
    "rapidfuzz>=3.14.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-tmp-files>=0.0.2",
    "ruff>=0.8.0",
    "ty>=0.0.14",
]

[project.scripts]
discovery = "discovery.cli:main"

[tool.uv]
package = true

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ANN"]
ignore = ["E501"]  # Line length handled by formatter

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
